--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Prestamos - Su banco</title>
 </head>
 <body>
@@ -13,18 +14,21 @@
             <h1>Bienvenido a su banco</h1>
             <h3>Genere su prestamo en pesos, dolares o U.V.A.</h3>
         </div>
-        <div class="monto"></div>
-            <label>Ingrese su nombre y apellido:
-                <input type="text" id="nombre" name="nombre" required>
-            </label>
-            <label>Ingrese su D.N.I.:
-                <input type="number" id="dni" name="dni" required>
-            </label>
-            <label>Ingrese el monto de su prestamo:
-                <input type="number" id="monto" name="monto" required>
-            </label>
+        <div class="d-xl-flex flex-column">
+            <div class="mb-12">
+                <label for="formGroupExampleInput" class="form-label ">Ingrese su nombre y apellido:</label>
+                <input type="text" class="form-control" id="nombre" name="nombre" required>
+            </div>
+            <div class="mb-12">
+                <label for="formGroupExampleInput" class="form-label">Ingrese su D.N.I.:</label>
+                <input type="number" class="form-control" id="dni" name="dni" required>
+            </div>
+            <div class="mb-12">
+                <label for="formGroupExampleInput" class="form-label">Ingrese el monto de su prestamo:</label>
+                <input type="number" class="form-control" id="monto" name="monto" required>
+            </div>
             <label>Seleccione el plan de cuotas que desea
-                <select id="cuotas" name="cuotas" required>
+                <select id="cuotas" name="cuotas" class="form-select" required>
                     <option value="">(Seleccione una opción)</option>
                     <option value="12">12</option>
                     <option value="18">18</option>
@@ -36,19 +40,21 @@
                 <input type="checkbox" id="ayuda" name="ayuda">
             </label>
             <label for="moneda">Seleccione que tipo de prestamo necesita</label>
-                    <select id="moneda"  name="moneda">
+                    <select id="moneda"  name="moneda" class="form-select">
                         <option value="">(seleccione una opción)</option>
                         <option value="pesos">Pesos</option>
                         <option value="dolares">Dolares</option>
                         <option value="uva">U.V.A.</option>
                     </select>
+        </div>
         <div class="botonera">
-            <button class="cancelar">Cancelar</button>
-            <input class="aceptar" type="button" value="Simular" onclick="verificarCreditoOtorgado()">
+            <button class="btn btn-danger">Cancelar</button>
+            <input class="btn btn-success" type="button" value="Simular" onclick="verificarCreditoOtorgado()">
         </div>
         <div id="resultado" class="resultado"></div>
     </div>
     <footer>copyright MMXXIII Su banco</footer>
     <script src="./main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
